[gd_scene load_steps=4 format=3 uid="uid://dw2ck8xqnvpw8"]

[ext_resource type="Script" path="res://scripts/exploration/traveling_dragon.gd" id="1_traveling_dragon"]
[ext_resource type="Texture2D" uid="uid://dttdxkm8c0jrs" path="res://assets/sprites/Flying-Red-Dragon.png" id="2_dragon_sprite"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fill"]
bg_color = Color(0, 1, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0.5, 0, 1)

[node name="TravelingDragon" type="Node2D"]
script = ExtResource("1_traveling_dragon")

[node name="DragonSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = null

[node name="NameLabel" type="Label" parent="."]
offset_left = -50.0
offset_top = -35.0
offset_right = 50.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 11
text = "Dragon"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -30.0
offset_top = 25.0
offset_right = 30.0
offset_bottom = 33.0
theme_override_styles/fill = SubResource("StyleBoxFlat_fill")
max_value = 100.0
show_percentage = false
